--- a/ScheduleProject/app/src/main/res/layout/activity_update_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_update_task.xml
@@ -23,17 +23,15 @@
             android:textSize="24sp" />
 
         <EditText
-            android:id="@+id/editTextTitle"
+            android:id="@+id/editTextTitle_u"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:layout_marginTop="20dp"
             android:inputType="textPersonName" />
 
-
-
         <EditText
-            android:id="@+id/editTextDes"
+            android:id="@+id/editTextDes_u"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:ems="10"
@@ -42,7 +40,7 @@
             android:inputType="textMultiLine" />
 
         <EditText
-            android:id="@+id/editTextDate"
+            android:id="@+id/editTextDate_u"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -93,21 +91,21 @@
                 android:id="@+id/radioGroup_status">
 
                 <RadioButton
-                    android:id="@+id/radioButtonNotyet"
+                    android:id="@+id/radioButtonNotyet_u"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:checked="true"
                     android:text="@string/task_create_rbtn_not" />
 
                 <RadioButton
-                    android:id="@+id/radioButtonDoing"
+                    android:id="@+id/radioButtonDoing_u"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:checked="false"
                     android:text="@string/task_create_rbtn_doing" />
 
                 <RadioButton
-                    android:id="@+id/radioButtonDone"
+                    android:id="@+id/radioButtonDone_u"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:checked="false"
@@ -136,27 +134,26 @@
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/radioButtonUI1"
+                    android:id="@+id/radioButtonUI1_u"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
                     android:checked="true"
                     android:text="RadioButton" />
                 <RadioButton
-                    android:id="@+id/radioButtonUI2"
+                    android:id="@+id/radioButtonUI2_u"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp"
+                    android:checked="false"
+                    android:text="RadioButton" />
+                <RadioButton
+                    android:id="@+id/radioButtonUI3_u"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
                     android:checked="false"
                     android:text="RadioButton" />
 
                 <RadioButton
-                    android:id="@+id/radioButtonUI3"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
-                    android:checked="false"
-                    android:text="RadioButton" />
-
-                <RadioButton
-                    android:id="@+id/radioButtonUI4"
+                    android:id="@+id/radioButtonUI4_u"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
                     android:checked="false"
@@ -186,7 +183,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/buttonCamera"
+                    android:id="@+id/buttonCamera_u"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -194,7 +191,7 @@
                     android:text="@string/task_create_camera" />
 
                 <Button
-                    android:id="@+id/buttonUpload"
+                    android:id="@+id/buttonUpload_u"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -202,12 +199,7 @@
                     android:onClick="uploadBtnAction"
                     android:text="@string/task_create_upload" />
             </LinearLayout>
-
-
-
         </LinearLayout>
-
-
 
         <LinearLayout
             android:id="@+id/layout_imageView"
@@ -216,19 +208,18 @@
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
             <ImageView
-                android:id="@+id/imageViewProfilePic"
+                android:id="@+id/imageViewProfilePic_u"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:srcCompat="@tools:sample/avatars[3]" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/buttonSave"
+            android:id="@+id/buttonSave_u"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:onClick="saveBtnAction"
             android:text="@string/btn_save" />
-
     </LinearLayout>
 </ScrollView>
