--- a/ScheduleProject/app/src/main/res/layout/activity_view_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_view_task.xml
@@ -159,7 +159,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/buttonSave"
+            android:id="@+id/buttonBack_v"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
